styles/scss/components/_main.scss
// main : ../template.scss

.open {
    .main-background,
    .main-container {
        -webkit-filter: blur(5px);
    }
}

.main-background,
.main-container {
    width: 100%;
    height: 100vh;

    background-color: $white;
    background-repeat: no-repeat;
}

.main-background {
    background-image: url( "../../images/backgrounds/7.jpg" );
    background-size: cover;

    &#map {
        background-color: #3B5A42;
        background-image: none;
    }
}

.main-container {
    position: absolute;
    display: block;

    margin: 0;
    padding: 12vh 6vw;

    width: 100%;

    overflow-x: hidden;
    overflow-y: auto;

    p {
        margin: 20px 0;
    }

    .top,
    .bot {
        position: fixed;
        right: 0;

        width: 41.66667%;;
        height: 80px;

        background-image: linear-gradient($white, transparent);

        content: "";
        z-index: 1;

        @include max-screen($tablet) {
            width: 100%;
        }
    }

    .top { top: 0; }
    .bot { bottom: 0; transform: rotate(180deg); }
}

